fix: update destructive foreground color and enhance button text overflow handling

--- a/src/app.css
+++ b/src/app.css
@@ -49,7 +49,7 @@
   --accent: oklch(39.937% 0.00669 286.001);
   --accent-foreground: oklch(1 0 0);
   --destructive: oklch(43.631% 0.14598 25.642);
-  --destructive-foreground: oklch(80% 0.09405 17.576);
+  --destructive-foreground: oklch(94.326% 0.02856 14.803);
   --success: oklch(24.9% 0.05126 143.852);
   --success-foreground: oklch(88.711% 0.22825 144.526);
   --warning: oklch(24.9% 0.07117 101.611);
@@ -174,6 +174,7 @@
     height: 28px;
     width: fit-content;
     min-width: 35px;
+    max-width: 200px;
     background-color: color-mix(in oklab, var(--blurple) 60%, transparent);
     display: grid;
     grid-template-columns: auto;
@@ -181,6 +182,14 @@
     align-items: center;
     animation-duration: 100ms;
     cursor: pointer;
+
+    span,
+    p {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 100%;
+    }
 
     &:has(:nth-child(2)) {
       grid-template-columns: 14px auto;
